# ITS-Convert

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: droid-review.yml  droid.yml
examples/: demo.go  demo.ps1  demo.py  demo.sh  tar_extract.sh
itsconvert/: __init__.py  analyzer.py  cli.py  clli.py  config.py  errors.py  ir.py  utils.py
itsconvert/packagers/: __init__.py  base.py  nuitka_packager.py  ps2exe_packager.py  pyinstaller_packager.py  shc_packager.py  wrapper_packager.py
itsconvert/translators/: __init__.py  base.py  bash_parser.py  c_emitter.py  cmd_emitter.py  cmd_parser.py  cpp_emitter.py  cs_emitter.py  dart_emitter.py  elixir_emitter.py  emit_bash.py  emit_cmd.py  emit_powershell.py  emit_python.py  fsharp_emitter.py  go_emitter.py  go_parser.py  haskell_emitter.py  java_emitter.py  js_emitter.py  js_parser.py  julia_emitter.py  kt_emitter.py  lua_emitter.py  nim_emitter.py  php_emitter.py  pl_emitter.py  powershell_parser.py  ps1_emitter.py  ps1_parser.py  py_emitter.py  py_parser.py  python_parser.py  r_emitter.py  rb_emitter.py  rb_parser.py  rs_emitter.py  scala_emitter.py  sh_emitter.py  sh_parser.py  (+4 more)
scripts/: validate-package.js
tests/: test_clli.py  test_convert.py  test_ir.py  test_translate.py
