[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itsconvert"
version = "1.0.1"
description = "Translate automation scripts across 25 languages via an intermediate representation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "ITS-Convert Contributors" },
]
keywords = ["translator", "cross-language", "code-converter", "ir", "python", "bash", "powershell", "go", "rust", "javascript", "typescript", "ruby"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Compilers",
  "Topic :: Utilities",
]
dependencies = [
  "pydantic>=2.7",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
itsconvert = "itsconvert.cli:app"

[project.urls]
Homepage = "https://github.com/v1ral-its/ITS-Convert"
Repository = "https://github.com/v1ral-its/ITS-Convert"
Issues = "https://github.com/v1ral-its/ITS-Convert/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
